# maws

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  SECURITY.md  mise.toml  openapi.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: pre-commit.yml  tests.yml
.mise/tasks/: openapi-client-generator
app/: config.py  main.py
app/commands/: ecs.py
src/maws/: __init__.py  config.py  main.py
src/maws/commands/: ecs.py
src/rubber_duck/: __init__.py  config.py  main.py
src/rubber_duck/commands/: ecs.py
tests/: config_test.py  conftest.py  init_test.py  main_test.py
tests/commands/: ecs_test.py
