[project]
name = "maws"
version = "25.12.0"
description = "Workflow based API to run jobs"
authors = [
  { name = "Jochen Werner", email = "jochen.werner@skaylink.com" },
  { name = "Stefan Heitmüller", email = "stefan.heitmueller@skaylink.com" },
]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
  "pydantic==2.11.4",
  "pydantic-settings==2.9.1",
  "typer==0.15.4",
  "rich==14.0.0",
  "openapi-python-client>=0.25.3",
  "mypy-extensions>=1.1.0",
  "pathspec>=0.12.1",
]

[project.urls]
Repository = "https://github.com/skaylink/maws"

[project.scripts]
maws = "maws.main:main"

[dependency-groups]
dev = [
  "faker==37.1.0",
  "pytest==8.3.5",
  "pytest-env==1.1.5",
  "pytest-cov==6.1.1",
]
build = [
  "nuitka==2.8.4",
]

[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "maws"

[tool.pytest_env]
ENDPOINT = "http://dummy-host"
SECRET = "dummy-cmapi-secret"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
addopts = """-vv"""

[tool.coverage.run]
omit = ["tests/*", "src/maws/clients/*"]
