[project]
name = "maws"
version = "25.12.2"
description = "Managed AWS command line client"
authors = [
  { name = "Jochen Werner", email = "jochen.werner@skaylink.com" },
  { name = "Stefan Heitmüller", email = "stefan.heitmueller@skaylink.com" },
]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
  "pydantic==2.12.5",
  "pydantic-settings==2.12.0",
  "typer==0.20.0",
  "rich==14.2.0",
  "openapi-python-client>=0.25.3",
  "mypy-extensions>=1.1.0",
  "pathspec>=0.12.1",
]

[project.urls]
Repository = "https://github.com/skaylink/maws"

[project.scripts]
maws = "maws.main:main"

[dependency-groups]
dev = [
  "faker==39.0.0",
  "pytest==9.0.2",
  "pytest-env==1.1.5",
  "pytest-cov==7.0.0",
]
build = [
  "nuitka==2.8.9",
]

[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "maws"

[tool.pytest_env]
ENDPOINT = "http://dummy-host"
SECRET = "dummy-cmapi-secret"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
addopts = """-vv"""

[tool.coverage.run]
omit = ["tests/*", "src/maws/clients/*"]
